--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,13 @@
 
+
+spring.datasource.url=jdbc:mysql://localhost:3306/ProductAppDB?useSSL=false&allowPublicKeyRetrieval=true&createDatabaseIfNotExist=true
+spring.datasource.username=root
+spring.datasource.password=Suyash@21
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# HIBERNATE PROPERTIES
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql = true
+
